// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList when data is empty 1`] = `
Array [
  <div
    className="sc-dkrFOg"
  >
    Search title:
     
  </div>,
  <input
    className="sc-hLBbgP feKHzH"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Rick"
    type="text"
    value=""
  />,
  <div
    className="sc-bcXHqe kbZGuW"
  />,
]
`;

exports[`ItemList when data is filled 1`] = `
Array [
  <div
    className="sc-dkrFOg"
  >
    Search title:
     
  </div>,
  <input
    className="sc-hLBbgP feKHzH"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Rick"
    type="text"
    value=""
  />,
  <div
    className="sc-bcXHqe kbZGuW"
  />,
]
`;

exports[`ItemList when data is not fetched yet 1`] = `
Array [
  <div
    className="sc-dkrFOg"
  >
    Search title:
     
  </div>,
  <input
    className="sc-hLBbgP feKHzH"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Rick"
    type="text"
    value=""
  />,
  <div
    className="sc-bcXHqe kbZGuW"
  >
    <div
      className="sc-gswNZR fzCsOl"
    >
      Loading...
    </div>
  </div>,
]
`;
